syntax = "proto3";

option csharp_namespace = "domain.grpClient";

service WorkoutPlanService {
  rpc createWorkoutPlan(WorkoutPlanRequest) returns (WorkoutPlanResponse);
}

message WorkoutPlanRequest {
  string wpName = 1;
  int32 timeGoal = 2;
  string type = 3;
  int32 userID = 4;
}

message WorkoutPlanResponse {
  int64 wpid = 1;
}
